force-app/main/default/objects/Invoice_Partner__c/Invoice_Partner__c.object-meta.xml
<CustomObject>
    <label>Invoice Partner</label>
    <nameField>
        <displayFormat>IP-{00000}</displayFormat>
        <label>Invoice Partner Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>