force-app/main/default/objects/Invoice_Partner__c/fields/Partner_Function__c.field-meta.xml
<CustomField>
    <fullName>Partner_Function__c</fullName>
    <label>Partner Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>RG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>