force-app/main/default/objects/Invoice_Partner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Invoice__c</columns>
    <columns>Partner_Function__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>